Fix hit testing overlay scrollbars

Bug: 782802
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ic31f94ca2a3e45881682940ae28f754894159a51