third_party/WebKit/Source/core/paint/PaintLayerScrollableArea.cpp
@@ -1220,7 +1220,9 @@ IntSize PaintLayerScrollableArea::ScrollbarOffset(
 
   if (&scrollbar == HorizontalScrollbar()) {
     return IntSize(HorizontalScrollbarStart(0),
-                   Box().BorderTop().ToInt() + VisibleHeight());
+                   Box().BorderTop().ToInt() +
+                       VisibleContentRect(kIncludeScrollbars).Height() -
+                       HorizontalScrollbar()->ScrollbarThickness());
   }
 
   NOTREACHED();
@@ -1562,14 +1564,16 @@ bool PaintLayerScrollableArea::HitTestOverflowControls(
     if (resize_control_rect.Contains(local_point))
       return true;
   }
-
   int resize_control_size = max(resize_control_rect.Height(), 0);
+
+  IntRect visible_rect = VisibleContentRect(kIncludeScrollbars);
+
   if (HasVerticalScrollbar() &&
       VerticalScrollbar()->ShouldParticipateInHitTesting()) {
     LayoutRect v_bar_rect(
         VerticalScrollbarStart(0, Layer()->PixelSnappedSize().Width()),
         Box().BorderTop().ToInt(), VerticalScrollbar()->ScrollbarThickness(),
-        VisibleContentRect(kIncludeScrollbars).Height() -
+        visible_rect.Height() -
             (HasHorizontalScrollbar()
                  ? HorizontalScrollbar()->ScrollbarThickness()
                  : resize_control_size));
@@ -1583,13 +1587,15 @@ bool PaintLayerScrollableArea::HitTestOverflowControls(
   if (HasHorizontalScrollbar() &&
       HorizontalScrollbar()->ShouldParticipateInHitTesting()) {
     // TODO(crbug.com/638981): Are the conversions to int intentional?
+    int h_scrollbar_thickness = HorizontalScrollbar()->ScrollbarThickness();
     LayoutRect h_bar_rect(
         HorizontalScrollbarStart(0),
-        Box().BorderTop().ToInt() + VisibleHeight(),
-        VisibleContentRect(kIncludeScrollbars).Width() -
-            (HasVerticalScrollbar() ? VerticalScrollbar()->ScrollbarThickness()
+        Box().BorderTop().ToInt() + visible_rect.Height() -
+            h_scrollbar_thickness,
+        visible_rect.Width() - (HasVerticalScrollbar()
+                                    ? VerticalScrollbar()->ScrollbarThickness()
                                     : resize_control_size),
-        HorizontalScrollbar()->ScrollbarThickness());
+        h_scrollbar_thickness);
     if (h_bar_rect.Contains(local_point)) {
       result.SetScrollbar(HorizontalScrollbar());
       return true;
